k8s/service-db.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: spring-app
spec:
  selector:
    app: postgres-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None  # Headless service for StatefulSet
