k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
  namespace: spring-app
spec:
  selector:
    app: spring-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
